# node-omni-orcha

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  local_llama.patch  mlx.md  package-lock.json  package.json  server.ts  tsconfig.build.json  tsconfig.json
.github/workflows/: build-and-publish.yml  publish-only.yml
cpp/: image_context.cpp  image_context.h  kokoro_context.cpp  kokoro_context.h  llm_context.cpp  llm_context.h  omni_binding.cpp  stt_context.cpp  stt_context.h  tts_context.cpp  tts_context.h
cpp/common/: async_helpers.h  error_helpers.h
cpp/image/: CMakeLists.txt  image_binding.cpp  image_binding.h
cpp/llm/: CMakeLists.txt  llm_binding.cpp  llm_binding.h
cpp/stt/: CMakeLists.txt  stt_binding.cpp  stt_binding.h
cpp/tts/: CMakeLists.txt  tts_binding.cpp  tts_binding.h
cpp/tts_qwen3/: CMakeLists.txt  tts_qwen3_binding.cpp
engine/common/: reasoning-budget.cpp  sampling.cpp
engine/diffusion/: denoiser.hpp  gpu_tensor.hpp  model.cpp  stable-diffusion.cpp
engine/ggml/src/ggml-cuda/: ggml-cuda.cu
engine/ggml/src/ggml-metal/: ggml-metal-device.cpp  ggml-metal-device.h  ggml-metal-device.m  ggml-metal-impl.h  ggml-metal-ops.cpp  ggml-metal-ops.h  ggml-metal.metal
engine/kokoro/: kokoro.cpp  kokoro.h  phonemize.cpp  phonemize.h  vocab.h
engine/mtmd/: mtmd-helper.cpp
engine/tts/: gguf_loader.cpp  gguf_loader.h  qwen3_tts.cpp  qwen3_tts.h  qwen3tts_c_api.cpp  qwen3tts_c_api.h  text_tokenizer.cpp
patches/: qwen3-tts-windows.patch
scripts/: crash-test-cuda.ts  crash-test-r2.ts  crash-test-r3.ts  crash-test-r4.ts  crash-test-r5.ts  crash-test-r6.ts  crash-test-r7.ts  crash-test.ts  download-kokoro-voices.ts  download-onnxruntime.sh  download-test-models.sh  full-integration-test.ts  generate-phoneme-dict.ts  i2v-test.ts  kokoro-test.ts  long-video-test.ts  samuel-jackson-test.ts  stress-test.ts  video-benchmark.ts  vision-crash-test.ts  vision-integration-test.ts  vision-stress-test.ts
src/: binding-loader.ts  index.ts  model-detector.ts  types.ts
src/image/: image-model.ts
src/llm/: llm-model.ts
src/stt/: stt-model.ts
src/tts/: kokoro-model.ts  tts-model.ts
src/utils/: gguf-reader.ts  gpu.ts  system.ts
test/: binding-loader.test.ts  gguf-reader.test.ts  image.test.ts  llm.test.ts  model-detector.test.ts  multimodal.test.ts  stt.test.ts  test-output-helper.ts  tts-qwen3.test.ts  video.test.ts
test/fixtures/: Samuel.flac
